# mdss

./: .gitignore  CMakeLists.txt  README.md  solver_test.sln
C172test/: C172test.cpp  C172test.vcxproj  C172test.vcxproj.filters  displayflightdata.asv  displayflightdata.m  pch.h
MathModule/: MathModule_v09.sln
MathModule/Debug/: MathModule_v09.ilk
MathModule/MathModule_v09/: ClassDiagram1.cd  ClassDiagram2.cd  DynamicQuaternion.cpp  LTI_test.slx  LTIsimulation.txt  LTIsystem.cpp  LTIsystem.h  MathModule_v09.aps  MathModule_v09.cpp  MathModule_v09.vcxproj  MathModule_v09.vcxproj.filters  Math_Gain.cpp  OdeSolver.cpp  OdeSolver.h  Quaternion2.cpp  ReadMe.txt  RigidBody.cpp  RigidBody.h  RungeKuttaFamily.cpp  RungeKuttaFamily.h  SimControlTest.cpp  SimController.cpp  SimController.h  Source_SignalGenerator.cpp  Source_SignalGenerator.h  Subsystem.cpp  Subsystem.h  TopologyAnalysis.cpp  TopologyAnalysis.h  UtilityFunctions.cpp  UtilityFunctions.h  resource.h  stdafx.cpp  testLTI.m  util_Recorder.cpp  util_Recorder.h
Reference/: 172主观测试性能问题_Lion_200119.xls  在VSproject中加载Eigen库.txt
archived src/: MatlabIO.cpp
launcher/: launcher.bat
solver_test/: logfunction_test.m  solver_test.vcxproj  solver_test.vcxproj.filters
solver_verification/: untitled.slx.autosave
solver_verification/aircraft_linear/: Question5.m
solver_verification/linear/: Linearsystem.slx  Linearsystem.slx.autosave  linear_system_state.mat  linear_verification_plot.m  loadmatfile.m
solver_verification/rigid_body/: rigid_body_plot.m  rigid_body_simulation.slx  rigid_body_simulation.slx.autosave  rigid_body_simulation.slxc  rigid_body_state.mat
src/: pch.h  solver_test.cpp
src/Aerodynamics/: AeroAngle.cpp  AeroAngle.h  AeroForceMoment1.cpp  AeroForceMoment1.h  StandardAtmosphere.cpp  StandardAtmosphere.h
src/Application/: Aircraftmodel.cpp  Aircraftmodel.h  C172aircraftmodel.cpp
src/Autopilot/: LateralCstar.cpp  LateralCstar.h  LongitudinalCstar.cpp  LongitudinalCstar.h
src/ContinuousTimeSystems/: LTIsystem.cpp  LTIsystem.h  LinearSystem.cpp  LinearSystem.h  RigidBody.cpp  RigidBody.h
src/Discontinuous/: DiscontinuousSystem.cpp  (+1 more)
verification/: drawlogfromtag.m
vs_workspace_info/: atmosphere_data.mat  solver_test.vcxproj  solver_test.vcxproj.filters
(+115 files in other folders)
